# octorun

./: .pre-commit-config.yaml  DRAFT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  test
examples/: config.yaml.example  controller.env.example
octorun/: __init__.py  controller.py
octorun/Classes/: Config.py  Provider.py
octorun/utils/: github_utils.py
octorun/webhook_listener/: app.py
src/: configparser.py  main.py
tests/: test_main.py
